project/logs/20250709_141409.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:23:42: error: use of undeclared identifier 'textrueColor'
        output.color = gMaterial.color * textrueColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
                                         ^
Object3D.PS.hlsl:29:42: error: use of undeclared identifier 'textrueColor'
        output.color = gMaterial.color * textrueColor;
                                         ^
Object3D.PS.hlsl:32:12: warning: implicit truncation of vector type [-Wconversion]
    float3 transformedUV = mul(float32_t4(input.texcoord, 1.0f,1.0f), gMaterial.uvTransform);
           ^

